hemsidan/Millionare project/css/info.css
@import url("nav.css");
@import url("footer.css");

/* styling distance between navbar and content*/
.space-between-nav-and-section-in-fpPage{
   height: 20vh;
}

/* styling main heading */
#fpH1 {
   text-align: center;
   font-size: 60px;
}

/*styling the text in p */
p {
   color:black;
}



/*styling the main divs*/
.fpInfo{
   width: 85%;
   padding: 10px;
   display: flex;
   margin: auto;
   margin-top: 70px;
   margin-bottom: 70px;
   align-items: center;
   background-color: white;
	border-radius: 55px;
   
}

/* Styling the distance between the divs inside the div*/
.fpInfo > div{
   padding: 30px;
}

/* Hiding a image for computer screens*/
#responivePic {
   display: none;
}

/* Handling tablets*/
@media screen and (max-width: 768px) {
   #fpH1 {
      font-size: 30px;
   }

   .fpInfo {
      width: 100%;
   }
    
   p {
      font-size: 13px;
      
   }
}

/* Handling phones*/
@media screen and (max-width: 600px){
   body {
      width: fit-content;
   }

   /* Displays the hidden image*/
   #responivePic {
      display: block;
   }

   /*Hide a image that usually shows*/
   #normalPic {
      display: none;
   }

   /* Prevents the text and images to not appear next to each other*/
   .fpInfo{
   display: inline;
   background-color: transparent;
   }
   /*Centering the images*/
   .fpPics {
		text-align: center;
   }
   /* Makes the images smaller*/
    img {
      width: 50%;
      height: 50%;
      margin-top: 30px;
   }
   
   
}

